# liver-heart

./: .gitignore  README.md  anotations.txt  fade.ino
AuRAEngine/engine/common/: aura.ocr.py
AuRAOCR/DB/: diagram.py
AuRAOCR/engine/common/: test.py
AuRAOCR/server/: go.mod  main.go
EASY/: cli.py  main.py  reco.py  text_recognition_module.py  wave.py
Embedded-Platform/cam/CameraWebServer/: CameraWebServer.ino
OCR/: OCR.py  config.py  main.py  ocr.py
ROS_Platform/animations/: main_screen_animate.ino
ROS_Platform/cam/CameraWebServer/: animate_template.ino  typing_display_effect.ino
cli-optic/: cli.py  core-old.py  core.py
documentation/RPI3-SCHEME-DESC/: scheme.org
engine/backend/actix/: Cargo.toml
engine/backend/actix/src/: main.rs
engine/beta/: main.js
engine/common/: aura.ocr.py  fetch_rois_data.py  test.py
engine/core/OCR/: aura.ocr.py
engine/web/: app.js  index.html  server.js  todo.md
experimental/: monitor.py  wave.py
experimental/beta/actix/: Cargo.toml
experimental/beta/actix/src/: main.rs
experimental/old/: cli.py
experimental/staging/: core.cpp  state.m  state.rs
ocr/: common.py  easy_ocr_model.py  intel_openvino_test.py  main.py  v2_tesseract.py  video_text_recognition.py
ocr/config/: ts.py
recognition-tests/: cam_text_recognition.py  main.py  requirements.txt  text_detection.cpp  video_text_recognition.py
recognition-tests/config/: general.py
server/API/: electrocardiogram.json  model.py
server/drogon-tests/: CMakeLists.txt
tests/API/: app.js  app.py  client.cpp  model.py
web-server/: app.py
(+35 files in other folders)
