[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.13.1"
actix-web = "4"
actix-cors = "0.6"
log = "0.4"
env_logger = "0.9"